Minor CSS Q.O.L. Updates & Bug Fixes
Updated overflow for bullet points to not go underneath bullet point, along with extra spacing between content and bullet point in order to improve readability.
Updated background of body to be same as background color in order to keep color consistent when refreshing page or dragging it around on mobile browsers.
Fixed " | " in between LinkedIn and GitHub not changing color when switching between dark and light mode.

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 
 body {
     background-color: var(--bgc);
+    background: var(—bgc);
 }
 
 #headshotheader {
@@ -63,8 +64,11 @@ h2, ul {
 }
 
 ul {
-    padding-left: 0; /* Remove the default padding */
-    list-style-position: inside; /* Ensure bullet points align with the text */
+    /* padding-left: 0;  Remove the default padding */
+    /* list-style-position: inside; Ensure bullet points align with the text */
+    list-style-position: outside;
+    padding-left: 40px;
+    margin-left: -24px;
     margin-bottom: 0px;
 }
 
@@ -76,6 +80,8 @@ li {
     letter-spacing: .075rem;
     font-size: 17px;
     word-spacing: 0.075rem;
+
+    padding-left: 4px;
 }
 
 .link {
@@ -101,6 +107,10 @@ h2.title {
     font-family: "Questrial", sans-serif;
     font-weight: 75;
     letter-spacing: .075rem;
+    color: var(--text-color)
+}
+
+.headshot p {
     color: var(--text-color)
 }
 
